Committed PRCS version branch-1-4.2
empty

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2001 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.33 Tue, 04 Sep 2001 14:59:47 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.34 Tue, 04 Sep 2001 15:03:56 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -62,7 +62,7 @@
 %%   Right brace   \}     Tilde         \~}
 %
 % ^^A $Format: "% \\newcommand{\\version}{v$Version$}"$
-% \newcommand{\version}{v1.3}
+% \newcommand{\version}{v1.4}
 % ^^A $Format: "% \\newcommand{\\releasedate}{$ReleaseDate$}"$
 % \newcommand{\releasedate}{2001/09/04}
 % ^^A $Format: "% \\newcommand{\\packagecopyright}{$LaTeXCopyright$}"$
@@ -225,8 +225,8 @@
 % \section{Changes}
 % \begin{itemize}
 % \item[v1.4] Fix bug reported by Ulf Jaenicke-Roessler
-%   |<ujr@physik.phy.tu-dresden.de>|: the list of fixme's
-%   didn't work when called before the first fixme note.
+%   |<ujr@physik.phy.tu-dresden.de>|: the |\listoffixmes| command didn't work
+%   when called before the first fixme note.
 % \item[v1.3] Support for Italian thanks to Riccardo Murri
 %   |<murri@phc.unipi.it>|.
 % \item[v1.2] Support for German thanks to Harald Harders
@@ -240,7 +240,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡ $Format: "\\ProvidesPackage{fixme}[$ReleaseDate$ v$Version$"$
-\ProvidesPackage{fixme}[2001/09/04 v1.3
+\ProvidesPackage{fixme}[2001/09/04 v1.4
                         Insert fixme notes in your draft documents]
 
 %    \end{macrocode}
