Committed PRCS version version-1-4.1
Version 1.4.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2001 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.35 Wed, 05 Sep 2001 15:24:54 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.36 Wed, 05 Sep 2001 15:34:01 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -224,10 +224,10 @@
 %
 % \section{Changes}
 % \begin{itemize}
-% \item[v1.4] Fix bug reported by Ulf Jaenicke-Roessler
+% \item[v1.4] Support for the koma-script classes has been added.
+% \item[] Fix bug reported by Ulf Jaenicke-Roessler
 %   |<ujr@physik.phy.tu-dresden.de>|: the |\listoffixmes| command didn't work
 %   when called before the first fixme note.
-% \item[] Support for the koma-script classes has been added.
 % \item[v1.3] Support for Italian thanks to Riccardo Murri
 %   |<murri@phc.unipi.it>|.
 % \item[v1.2] Support for German thanks to Harald Harders
