--- a/README
+++ b/README
@@ -42,6 +42,7 @@ error. FiXme also comes with support for AUC-TeX.
 
 ** Version 1.4
 --------------
+*** Support for the koma-script classes.
 *** Fix bug reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
 the list of fixme's didn't work when called before the first fixme note.
 
